app/assets/stylesheets/custom.scss
// Override and add customized styles in this file.
//
// You can also create SCSS files in the app/assets/stylesheets/custom/
// folder and they will be loaded automatically.

.poll-answers-form {
  .help-text {
    display: block;
    font-size: 1rem;
    margin: 0 0 $line-height / 2;
  }

  .question-answer-fields {
    margin-bottom: $line-height;
  }

  .question-answer {
    display: flex;
    margin-bottom: 0.5rem;
  }

  [type="radio"] {
    margin-bottom: 0;
  }
}


body:not(.admin) {
  .top-links {
    @include full-width-border(bottom, 1px solid $border, $adjust-padding: true);

    background: $white;
    color: $black;
  }
}

.top-bar {
  .top-bar-title a img {
    @include breakpoint(medium) {
      width: 10rem;
      margin: $line-height / 3 0;
    }
  }
}

.public > .wrapper > header {
  .top-bar {
    color: $black;
    background-color: $white;

    a {
      font-weight: bold;
    }
  }
}

